--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,14 +1,16 @@
 
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
-@import 'variables';
+@import "bulma";
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+.navbar-item img {
+  max-height: 80px !important;
+}
+
+.share-your-joy {
+  max-width: 300px;
+}
+
+.hero.is-info.is-bold {
+    background-image: linear-gradient(141deg, #005d79, #1185d2 71%, #1074f7) !important;
 }
